0.5.1
 - minor filter fixes
 - added bbdb2xx translator source to contrib

0.5.0
 - tried to work around some problems with readline
 - some documentation update
20030530
 - updated autoconf/automake
 - updated man page
 - pine import filter update
20021008
 - options.c rewritten (new mutt style rc file support)
 - palmcsv export filter (Koenraad Heijlen)
 - added a spec file for rpm support
 - added --with-readline configure option
 - merged newtab patch by Sinan Kaan Yerli
 - new option: add_email_prevent_duplicates
 - bugfixes
2002-03-11
 - readline support
 - abook can be compiled with g++
 - attempt to improve --datafile behavior
 - html filter update (Morten Brix Pedersen)
 - store rcfile and addressbook to .abook directory
2002-02-04
 - use getopt to parse command line (also new options added)
 - use strcoll instead of strcmp for sorting entries
 - html filter fix
 - bugfixes

0.4.17
 - fixed an annoying file creation bug

0.4.16
 - use strcoll instead of strcmp for sorting entries
 - html filter fix
 - many bugfixes

0.4.15
 - new options --add-email and --add-email-quiet
 - proper mutt alias import filter
 - editor update
 - don't handle extra_column and extra_alternative as numbers in abookrc
 - added second address field
 - mail.vim update in contrib directory

0.4.14
 - added csv import filter
 - csv export filter fix
 - minor html filter update
 - fixed a minor memory leak in pine import filter
 - filter cleanups
 - fixes
 - "quit and print selected item(s) to stderr" command (Brian Medley)
 - contrib update

0.4.13
 - major code reorganization (phase 1)
 - fixed help viewer functions
 - ability to disable use of non-ascii characters (configuration option)
 - changed SIGINT behaviour
 - html export filter creates now valid html documents
 - ability to print/export only selected items
 - new editor commands
 - text filter update
 - query/find code cleanup
 - fixed snprintf related bugs
 - minor bugfixes

0.4.12
 - added man page for abookrc (Alan Ford)