@@ -16,3 +16,4 @@ misc:
 * Cursor disappears in some cases with abook_readline() on Solaris. If
   you have problems it is recommended to use ncurses library
 * fseek in ldif import filter should be eliminated
+* mutt import filter imports only first e-mail address
