@@ -1,7 +1,7 @@
 dnl abook configure.in
 
 AC_INIT(abook.c)
-AM_INIT_AUTOMAKE(abook, 0.5.0)
+AM_INIT_AUTOMAKE(abook, 0.5.1pre)
 AM_CONFIG_HEADER(config.h)
 
 AC_DEFINE(HAVE_SNPRINTF, 0, [Define if snprintf is available.])
