@@ -42,6 +42,7 @@ enum str_opts {
 	STR_PRINT_COMMAND,
 	STR_WWW_COMMAND,
 	STR_ADDRESS_STYLE,
+	STR_SORT_FIELD,
 	STR_MAX
 };
 
